# article-english-trainer

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
asr-worker/: README.md  pyproject.toml
asr-worker/src/asr_worker/: __main__.py  app.py
assets/kokoro/: README.md
public/: app.js  index.html  styles.css
scripts/: article-auth.ts  asr-worker-start.ts  dev-all.ts  doctor.sh  nemotron-preflight.ts  nemotron-serve.ts  setup.sh  tts-worker-start.ts
src/: app.ts  server.ts
src/article/: agentBrowserClient.ts  articleExtractor.ts
src/config/: env.ts
src/llm/: factory.ts  providerPolicy.ts  types.ts
src/llm/providers/: gemini.ts  nemotron.ts
src/routes/: article.ts  config.ts  session.ts
src/session/: trainingEngine.ts  trainingSessionStore.ts
src/speech/: httpAsrClient.ts  httpTtsClient.ts  minimumHeadroomFaceSayClient.ts  ttsFactory.ts  types.ts
src/types/: appContext.ts
tests/: app.test.ts  articleExtractor.test.ts  env.test.ts  httpAsrClient.test.ts  httpTtsClient.test.ts  minimumHeadroomFaceSayClient.test.ts  trainingEngine.test.ts  ttsFactory.test.ts
tts-worker/: README.md  pyproject.toml
tts-worker/src/tts_worker/: __init__.py  __main__.py  app.py  chunking.py  kokoro_engine.py
